--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             <li class="flex items-center"><i class="fas fa-check text-wecodeo-green mr-2"></i>Hosting & Domain 1 Tahun</li>
                             <li class="flex items-center"><i class="fas fa-check text-wecodeo-green mr-2"></i>Basic SEO Setup</li>
                         </ul>
-                        <a href="#cta-hard" class="w-full mt-auto text-center bg-white border-2 border-wecodeo-blue text-wecodeo-blue font-bold py-3 rounded-lg hover:bg-wecodeo-blue hover:text-white transition duration-300">Pesan Sekarang</a>
+                        <a href="https://rekodigital.form.id/Go-Digital-Starter" class="w-full mt-auto text-center bg-white border-2 border-wecodeo-blue text-wecodeo-blue font-bold py-3 rounded-lg hover:bg-wecodeo-blue hover:text-white transition duration-300">Pesan Sekarang</a>
                     </div>
                     <!-- Growth (Best Seller) -->
                     <div data-aos="fade-up" data-aos-delay="100" class="border-4 border-wecodeo-green rounded-xl p-8 shadow-xl relative h-full flex flex-col">
@@ -444,7 +444,7 @@
                             <li class="flex items-center"><i class="fas fa-check text-wecodeo-green mr-2"></i>Laporan Marketing Bulanan</li>
                             <li class="flex items-center"><i class="fas fa-check text-wecodeo-green mr-2"></i>Support Prioritas</li>
                         </ul>
-                        <a href="#cta-hard" class="w-full mt-auto text-center bg-wecodeo-green text-white font-bold py-3 rounded-lg hover:bg-opacity-90 transition duration-300">Pesan Sekarang</a>
+                        <a href="https://rekodigital.form.id/Go-Digital-Growth" class="w-full mt-auto text-center bg-wecodeo-green text-white font-bold py-3 rounded-lg hover:bg-opacity-90 transition duration-300">Pesan Sekarang</a>
                     </div>
                     <!-- Ultimate -->
                     <div data-aos="fade-up" data-aos-delay="200" class="border rounded-xl p-8 shadow-md h-full flex flex-col">
@@ -457,7 +457,7 @@
                             <li class="flex items-center"><i class="fas fa-check text-wecodeo-green mr-2"></i>Ads Management (Multi-platform)</li>
                             <li class="flex items-center"><i class="fas fa-check text-wecodeo-green mr-2"></i>Setup Chatbot AI</li>
                         </ul>
-                        <a href="#cta-hard" class="w-full mt-auto text-center bg-white border-2 border-wecodeo-blue text-wecodeo-blue font-bold py-3 rounded-lg hover:bg-wecodeo-blue hover:text-white transition duration-300">Pesan Sekarang</a>
+                        <a href="https://rekodigital.form.id/Go-Digital-Ultimate" class="w-full mt-auto text-center bg-white border-2 border-wecodeo-blue text-wecodeo-blue font-bold py-3 rounded-lg hover:bg-wecodeo-blue hover:text-white transition duration-300">Pesan Sekarang</a>
                     </div>
                 </div>
                  <div data-aos="fade-up" class="text-center mt-8 text-text-secondary">
