--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="keywords" content="jasa website, buat website, website umkm, website profesional, wecodeo, website bekasi, jasa website murah">
     <meta name="author" content="Wecodeo">
 
-    <link href="./assets/css/output.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <script defer src="./assets/js/alpine.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
